src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
    body::-webkit-scrollbar {
        display: none;
    }

    body {
        user-select: none;
    }

    @supports not (row-gap;: 1.5em) {
        .gap-y-6 {
            margin: -0.75em;
        }

        .gap-y-6>* {
            margin: 0.75em;
        }
    }
}

@layer utilities {
    .no-scrollbar::-webkit-scrollbar {
        display: none;
    }

    .no-scrollbar {
        -ms-overflow-style: none;
        /* IE and Edge */
        scrollbar-width: none;
        /* Firefox */
    }
}

